# tox-passenv

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pipelines.yml
src/tox_passenv/: _tox4_plugin.py  plugin.py
tests/: conftest.py  test_plugin.py
